# burn_rust_dl_sandbox

./: Cargo.toml  README.md
built_model/: squeezenet1.rs
src/: build.rs  main.rs
src/model/: label.rs  squeezenet.rs
