[package]
name = "squeezestas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.11.1", features = ["ndarray", "wgpu", "candle", "train"] }
burn-import = "0.11.1"
burn-train = "0.11.1"
image = "0.24.7"
serde = "1.0.193"
